<resources>
    <string name="app_name">多人实时画板</string>
    
    <string name="login_text">请输入登录信息</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_text">请填入注册信息</string>
    <string name="nickname">昵称</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    
    <string name="create_room">创建房间</string>
    <string name="update_room_list">更新房间列表</string>
    <string name="room_member_number">人</string>
    
    <string name="edit_info">编辑信息</string>
    <string name="logout">注销用户</string>
    <string name="edit_info_text">请填入新的用户信息</string>
    <string name="edit_info_password">密码不填则表示不作更改</string>
    
    <string name="send">发送</string>
    <string name="trigger_button">聊\n天\n界\n面</string>
    <string name="admin">管理员</string>
    
    <string name="paint_color">画笔颜色</string>
    <string name="paint_width">画笔粗细</string>
    <string name="paint_mode">画笔模式</string>
    <string name="black">黑</string>
    <string name="blue">蓝</string>
    <string name="cyan">青</string>
    <string name="gray">灰</string>
    <string name="green">绿</string>
    <string name="magenta">洋红</string>
    <string name="red">红</string>
    <string name="yellow">黄</string>
    <string name="paint">画笔</string>
    <string name="eraser">擦除</string>

    <string name="upload_pic">设置背景图片</string>
    <string name="clear_draw">清空屏幕</string>

    <string name="dummy">-1</string>
</resources>
