<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/paint_color">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/black"
                    android:checked="true"
                    android:title="@string/black" />
                <item
                    android:id="@+id/blue"
                    android:title="@string/blue" />
                <item
                    android:id="@+id/cyan"
                    android:title="@string/cyan" />
                <item
                    android:id="@+id/gray"
                    android:title="@string/gray" />
                <item
                    android:id="@+id/green"
                    android:title="@string/green" />
                <item
                    android:id="@+id/magenta"
                    android:title="@string/magenta" />
                <item
                    android:id="@+id/red"
                    android:title="@string/red" />
                <item
                    android:id="@+id/yellow"
                    android:title="@string/yellow" />
            </group>
        </menu>
    </item>
    <item android:title="@string/paint_width">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/paint_width_1"
                    android:checked="true"
                    android:title="1" />
                <item
                    android:id="@+id/paint_width_5"
                    android:title="5" />
                <item
                    android:id="@+id/paint_width_10"
                    android:title="10" />
                <item
                    android:id="@+id/paint_width_15"
                    android:title="15" />
                <item
                    android:id="@+id/paint_width_20"
                    android:title="20" />
            </group>
        </menu>
    </item>
    <item android:title="@string/paint_mode">
        <menu>
            <group
                android:id="@+id/paint_mode"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/paint"
                    android:checked="true"
                    android:title="@string/paint" />
                <item
                    android:id="@+id/eraser"
                    android:title="@string/eraser" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/upload_pic"
        android:title="@string/upload_pic" />
    <item
        android:id="@+id/clear_draw"
        android:title="@string/clear_draw" />
</menu>